test/corpus/literals.txt
================================================================
Null literals
================================================================

null

----------------------------------------------------------------

(source_file (null_literal))

================================================================
Bool literals
================================================================

true
false

----------------------------------------------------------------

(source_file
  (bool_literal)
  (bool_literal))

================================================================
Num literals
================================================================

0
42
6.28

----------------------------------------------------------------

(source_file
  (num_literal)
  (num_literal)
  (num_literal))

================================================================
String literals
================================================================

'kawaii'
"Nyanyanyanyanyanyanya!"
'\\\''
"\\\""

----------------------------------------------------------------

(source_file
  (str_literal)
  (str_literal)
  (str_literal)
  (str_literal))

================================================================
Template literals
================================================================

``
`foo`
`Hello {name}!`
`{ `{{ hoge: 0 }}` }`
`\{\`\\`

----------------------------------------------------------------

(source_file
  (template_literal)
  (template_literal)
  (template_literal
    (template_substitution (identifier)))
  (template_literal
    (template_substitution
      (template_literal
        (template_substitution
          (object_expression
            (object_key_value
              (identifier)
              (num_literal)))))))
  (template_literal))
