test/corpus/toplevel.txt
================================================================
Namespace
================================================================

:: Ns {
  let a = 0

  @f() {}

  :: Ns {}
}

----------------------------------------------------------------

(source_file
  (namespace
    name: (identifier)
    members: (namespace_body
      (var_def_statement
        dest: (identifier)
        init: (num_literal))
      (fn_def_statement
        name: (identifier)
        params: (parameters)
        body: (block))
      (namespace
        name: (identifier)
        members: (namespace_body)))))

================================================================
Meta
================================================================

### {}

### name {}

----------------------------------------------------------------

(source_file
  (meta
    value: (static_object_expression))

  (meta
    name: (identifier)
    value: (static_object_expression)))
